--- a/.gitignore
+++ b/.gitignore
@@ -302,3 +302,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,linux,windows,node,vscode,visualstudiocode,webstorm
+
+
+package-lock.json
