--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@storybook/addon-essentials": "^6.1.11",
     "@storybook/addon-links": "^6.1.11",
     "@storybook/react": "^6.1.11",
-    "babel-loader": "^8.2.2"
+    "babel-loader": "^8.2.2",
+    "react": "^17.0.1",
+    "react-dom": "16.13.1"
   },
   "dependencies": {}
 }
