--- a/package.json
+++ b/package.json
@@ -18,8 +18,13 @@
     "@storybook/addon-links": "^6.1.11",
     "@storybook/react": "^6.1.11",
     "babel-loader": "^8.2.2",
+    "eslint": "^7.17.0",
+    "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "16.13.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "eslint-plugin-react": "^7.22.0",
+    "react-is": "^17.0.1"
+  }
 }
