--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint .",
+    "prettier": "prettier --write .",
     "storybook": "start-storybook -p 6006 -s ./assets",
     "build-storybook": "build-storybook",
     "build-custom-properties": "node ./scripts/build-tokens"
@@ -19,6 +21,10 @@
     "@storybook/react": "^6.1.11",
     "babel-loader": "^8.2.2",
     "eslint": "^7.17.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "husky": ">=4",
+    "lint-staged": ">=10",
     "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "16.13.1"
@@ -26,5 +32,13 @@
   "dependencies": {
     "eslint-plugin-react": "^7.22.0",
     "react-is": "^17.0.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix"
   }
 }
