--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "brocoli",
-  "version": "1.0.0",
+  "name": "@brocoli-lab/brocoli-ui",
+  "version": "0.1.0",
+  "private": false,
   "description": "Brocoli - UI",
   "main": "index.js",
   "scripts": {
+    "dev": "yarn storybook",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint .",
     "prettier": "prettier --write .",
@@ -31,7 +33,12 @@
   },
   "dependencies": {
     "eslint-plugin-react": "^7.22.0",
+    "minireset.css": "0.0.7",
     "react-is": "^17.0.1"
+  },
+  "peerDependencies": {
+    "react": "^17.0.1",
+    "minireset.css": "0.0.7"
   },
   "husky": {
     "hooks": {
