--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "yarn storybook",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "lint": "eslint .",
     "prettier": "prettier --write .",
     "storybook": "start-storybook -p 6006 -s ./assets",
@@ -16,29 +16,43 @@
   "author": "Francisco Imanol Suarez",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.12.10",
+    "@babel/core": "7.12.10",
+    "@babel/preset-env": "7.12.11",
+    "@babel/preset-react": "7.12.10",
     "@storybook/addon-actions": "^6.1.11",
     "@storybook/addon-essentials": "^6.1.11",
     "@storybook/addon-links": "^6.1.11",
+    "@storybook/addon-storyshots": "6.1.15",
     "@storybook/react": "^6.1.11",
+    "babel-jest": "26.6.3",
     "babel-loader": "^8.2.2",
     "eslint": "^7.17.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "husky": ">=4",
+    "identity-obj-proxy": "3.0.0",
+    "jest": "26.6.3",
     "lint-staged": ">=10",
     "prettier": "^2.2.1",
     "react": "^17.0.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-test-render": "1.1.2",
+    "react-test-renderer": "17.0.1",
+    "semantic-release": "17.3.7"
   },
   "dependencies": {
     "eslint-plugin-react": "^7.22.0",
     "minireset.css": "0.0.7",
+    "react-addons-test-utils": "15.6.2",
     "react-is": "^17.0.1"
   },
   "peerDependencies": {
-    "react": "^17.0.1",
-    "minireset.css": "0.0.7"
+    "minireset.css": "0.0.7",
+    "react": "^17.0.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/FranciscoImanolSuarez/brocoli.git"
   },
   "husky": {
     "hooks": {
